--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         </div>
         <img src="./img/brick4.png" alt="">
         <h5 id="start-btn">START GAME</h5>
+        <div id="layer"></div>
         <img class="face one" src="./img/brick3.png" alt="">
         <img class="face two" src="./img/brick2.png" alt="">
         <img class="face three" src="./img/brick1.png" alt="">
