Agregué nivel 2, ladrillos god y algo de UI

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <img hidden id="brick2" src="./img/brick2.png" alt="Brick face">
     <img hidden id="brick3" src="./img/brick3.png" alt="Brick face">
     <img hidden id="brick4" src="./img/brick4.png" alt="Brick face">
+    <img hidden id="brick-god" src="./img/brickGod.png" alt="Brick face">
     <img hidden id="brick1hit" src="./img/brick1hit.png" alt="Brick face">
     <img hidden id="brick2hit" src="./img/brick2hit.png" alt="Brick face">
     <img hidden id="brick3hit" src="./img/brick3hit.png" alt="Brick face">
@@ -32,7 +33,7 @@
     <div style="background-color: rgba(25,25,50,.9);" id="win-modal">
         <h1>¡YOU WIN!</h1>
         <img id="win-brick" src="./img/brick3.png" alt="">
-        <span onclick="restartGame()">RESTART</span>
+        <span onclick="restartGame()">CONTINUE</span>
     </div>
     <h2>SCORE</h2>
     <h3></h3>
@@ -58,6 +59,7 @@
         <img class="face three" src="./img/brick1.png" alt="">
     </div>
     <audio src="./sounds/brick.mp3" id="brick-sound"></audio>
+    <audio src="./sounds/metal.mp3" id="metal-sound"></audio>
     <audio src="./sounds/pad.mp3" id="pad-sound"></audio>
     <audio src="./sounds/win.mp3" id="win-sound"></audio>
     <audio src="./sounds/laugh.mp3" id="lose-sound"></audio>
